# FedTree

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
dataset/: clean.py  eunite2001  machine.conf  test_dataset.txt
dataset/adult/: a9a_horizontal_p0  a9a_horizontal_p1  a9a_horizontal_test  a9a_vertical_p0  a9a_vertical_p1  a9a_vertical_test
docs/source/: Examples.rst  Experiments.rst  Frameworks.rst  Installation.rst  Parameters.rst  Quick-Start.rst  conf.py  index.rst
examples/: breast_distributed_horizontal_p1.conf  breast_distributed_horizontal_p2.conf  breast_distributed_horizontal_server.conf  breast_distributed_vertical_p1.conf  breast_distributed_vertical_p2.conf  horizontal_example.conf  prediction.conf  vertical_example.conf
examples/abalone/: a9a_horizontal_p1.conf  a9a_horizontal_server.conf  a9a_vertical_p0.conf  a9a_vertical_p1.conf  aba_horizontal_p0.conf  aba_horizontal_p1.conf  aba_horizontal_server.conf  aba_vertical_p0.conf  aba_vertical_p1.conf
examples/adult/: a9a_horizontal_p0.conf  a9a_horizontal_p1.conf  a9a_horizontal_server.conf  a9a_horizontal_simulation.conf  a9a_vertical_p0.conf  a9a_vertical_p1.conf
examples/credit/: credit_vertical_p0.conf  credit_vertical_p1.conf
include/FedTree/: booster.h  common.h  config.h.in  dataset.h  parser.h  predictor.h  syncarray.h  syncmem.h  trainer.h
include/FedTree/DP/: DifferentialPrivacy.h  clipper.h  differential_privacy.h  noises.h
include/FedTree/Encryption/: HE.h  HomomorphicEncrpytion.cpp  HomomorphicEncrpytion.h  diffie_hellman.h  pailler_gpu.h  paillier.h  paillier_gmp.h  paillier_gpu.cuh  paillier_gpu.h
include/FedTree/FL/: FLparam.h  FLtrainer.h  comm_helper.h  distributed_party.h  distributed_server.h  partition.h  party.h  server.h
include/FedTree/Tree/: GBDTparam.h  function_builder.h  gbdt.h  hist_cut.h  hist_tree_builder.h  histogram.h  splitpoint.h  tree.h  tree_builder.h
include/FedTree/Tree/objective/: objective_function.h
include/FedTree/metric/: metric.h  multiclass_metric.h  pointwise_metric.h  ranking_metric.h
include/FedTree/objective/: multiclass_metric.h  multiclass_obj.h  objective_function.h  ranking_obj.h  regression_obj.h
include/FedTree/util/: cub_wrapper.h  device_lambda.cuh  device_lambda.h  dirichlet.h  log.h  multi_device.h
python/: .gitignore  README.md  setup.py
python/FedTree/: FedTree.py
python/examples/: classifier_distributed_example.py  classifier_example.py  regressor_example.py  regressor_example_vertical.py
python/fedtree/: FedTree.py  __init__.py  distributed.py  fedtree.py
src/: main.cpp  syncmem.cpp
src/FedTree/: CMakeLists.txt  booster.cpp  dataset.cpp  distributed_party.cpp  distributed_server.cpp  fedtree_distributed_party.cpp  fedtree_distributed_server.cpp  fedtree_predict.cpp  fedtree_train.cpp  main.cpp  parser.cpp  predictor.cpp  scikit_fedtree.cpp  scikit_fedtree_distributed.cpp  syncmem.cpp  trainer.cpp
src/FedTree/DP/: DifferentialPrivacy.cpp  differential_privacy.cpp
src/FedTree/Encryption/: HE.cpp  diffie_hellman.cpp  pailler_gmp.cpp  paillier.cpp  paillier_gmp.cpp  paillier_gpu.cu
src/FedTree/FL/: FLtrainer.cpp  distributed_party.cpp  distributed_server.cpp  partition.cpp  party.cpp  server.cpp
src/FedTree/GNN/: dataset.py  gnn.py  model.py  predict_tree.py  read_tree.py  train_net.py
src/FedTree/Tree/: function_builder.cpp  gbdt.cpp  hist_cut.cpp  hist_tree_builder.cpp  tree.cpp  tree_builder.cpp
src/FedTree/grpc/: fedtree.grpc.pb.cc  fedtree.grpc.pb.h  fedtree.pb.cc  fedtree.pb.h  fedtree.proto
src/FedTree/metric/: metric.cpp  multiclass_metric.cpp  pointwise_metric.cpp  rank_metric.cpp
src/FedTree/objective/: multiclass_obj.cpp  objective_function.cpp  ranking_obj.cpp
src/FedTree/util/: common.cpp  log.cpp
src/test/: CMakeLists.txt  CMakeLists_bk  test_dataset.cpp  test_find_feature_range.cpp  test_gbdt.cpp  test_gradient.cpp  test_he.cpp  test_main.cpp  test_parser.cpp  test_partition.cpp  test_tree_builder.cpp
util/: csr_partition.py
utils/: FedTree_hcut.py  FedTree_vcut.py
